--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "satellizer-server",
+  "name": "angular-node-seed",
   "version": "0.0.0",
   "main": "server.js",
   "dependencies": {
